# Sphere

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
inc/: calculations.hpp  geometry.h  geometry.hpp  scene.hpp  visual.hpp
src/: calculations.cpp  geometry.cpp  visual.cpp
